solved css styling issue re: alignment

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,30 @@
 .App {
   text-align: center;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -100%);
+}
+
+ul {
+  list-style: none;
+}
+
+li {
+    display:inline-block;
+    font-size: 20px;
+    text-align: center;
+    padding: 10px;
+}
+
+a {
+  color: black;
+}
+
+.coffee {
+  color: #995533;
+}
+
+.heart {
+  color: #ff0000;
 }
